[package]
name = "dockermint"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
description = "The first CI/CD Pipeline for Cosmos SDK."
documentation = "https://docs.dockermint.io/"
readme = "README.md"
homepage = "https://dockermint.io/"
repository = "https://github.com/Dockermint/dockermint"
license = "Apache-2.0"
keywords = ["blockchain", "devops", "docker", "pipeline", "cosmos-sdk"]
categories = ["command-line-utilities", "virtualization"]
exclude = [".*", "assets/"]
publish = false

[badges]
maintenance = { status = "actively-developed" }

# ===========================================================================
# Features
# ===========================================================================

[features]
# Enable vendored OpenSSL for cross-compilation targets (musl, aarch64-gnu).
# Pass --features openssl-vendored to statically link OpenSSL without a
# system library requirement.
openssl-vendored = ["openssl/vendored"]

# ===========================================================================
# Dependencies
# ===========================================================================

[dependencies]
# TLS / SSL — optional, activated via the openssl-vendored feature gate.
openssl = { version = "=0.10.78", optional = true }
